fixed spacing on pollution

--- a/pollution.css
+++ b/pollution.css
@@ -1,6 +1,7 @@
 .pollutionContent {
     display: flex;
     justify-content: space-between;
+    height: 700px;
 }
 
 .left-panel {
